# game-metr-analyzer

./: README.md  pyproject.toml
game_metr_analyzer/: __init__.py  main.py  prompts.py
